[project]
name = "python_autoclicker"
version = "0.1.0"
description = ""
license = "GPL-3.0-only"
authors = [
  { name = "isaychris" },
  { name = "YisusChrist", email = "agelrenorenardo@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["pyautogui (>=0.9.54,<0.10.0)", "pynput (>=1.7.7,<2.0.0)"]

[project.urls]
repository = "https://github.com/YisusChrist/python-autoclicker"

[project.scripts]
autoclicker = "python_autoclicker.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
